--- a/Cinemas2001/Cinemas2001/App.config
+++ b/Cinemas2001/Cinemas2001/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
-<connectionStrings><add name="Cinemas2001Entities" connectionString="metadata=res://*/Modelo.Cinemas2001.csdl|res://*/Modelo.Cinemas2001.ssdl|res://*/Modelo.Cinemas2001.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALEPC;initial catalog=Cinemas2001;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+    <connectionStrings>
+         
+   <add name="Cinemas2001Entities" connectionString="metadata=res://*/Modelo.Cinemas2001Model.csdl|res://*/Modelo.Cinemas2001Model.ssdl|res://*/Modelo.Cinemas2001Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALEPC;initial catalog=Cinemas2001;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+</configuration>
