--- a/Cinemas2001/Cinemas2001/Cinemas2001.csproj
+++ b/Cinemas2001/Cinemas2001/Cinemas2001.csproj
@@ -54,29 +54,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Acceso_Datos\AD_Datos.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Modelo\Cinemas2001.Context.cs">
+    <Compile Include="Logica_Negocio\LN_Login.cs" />
+    <Compile Include="Modelo\Cinemas2001Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Cinemas2001.Context.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Modelo\Cinemas2001.cs">
+    <Compile Include="Modelo\Cinemas2001Model.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Cinemas2001.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Modelo\Cinemas2001.Designer.cs">
+    <Compile Include="Modelo\Cinemas2001Model.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Cinemas2001.edmx</DependentUpon>
+      <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Modelo\MO_Usuario.cs" />
     <Compile Include="Modelo\Usuario.cs">
-      <DependentUpon>Cinemas2001.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -92,12 +95,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EntityDeploy Include="Modelo\Cinemas2001.edmx">
+    <EntityDeploy Include="Modelo\Cinemas2001Model.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Cinemas2001.Designer.cs</LastGenOutput>
+      <LastGenOutput>Cinemas2001Model.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Modelo\Cinemas2001.edmx.diagram">
-      <DependentUpon>Cinemas2001.edmx</DependentUpon>
+    <None Include="Modelo\Cinemas2001Model.edmx.diagram">
+      <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -114,19 +117,19 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Modelo\Cinemas2001.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Cinemas2001.Context.cs</LastGenOutput>
-      <DependentUpon>Cinemas2001.edmx</DependentUpon>
-    </Content>
-    <Content Include="Modelo\Cinemas2001.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Cinemas2001.edmx</DependentUpon>
-      <LastGenOutput>Cinemas2001.cs</LastGenOutput>
-    </Content>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Content Include="Modelo\Cinemas2001Model.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
+      <LastGenOutput>Cinemas2001Model.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Modelo\Cinemas2001Model.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
+      <LastGenOutput>Cinemas2001Model.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
