--- a/Cinemas2001/Cinemas2001/App.config
+++ b/Cinemas2001/Cinemas2001/App.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <connectionStrings>
-         
-   <add name="Cinemas2001Entities" connectionString="metadata=res://*/Modelo.Cinemas2001Model.csdl|res://*/Modelo.Cinemas2001Model.ssdl|res://*/Modelo.Cinemas2001Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALEPC;initial catalog=Cinemas2001;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+        <add name="Cinemas2001Entities" connectionString="metadata=res://*/Modelo.Cinemas2001Model.csdl|res://*/Modelo.Cinemas2001Model.ssdl|res://*/Modelo.Cinemas2001Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALEPC;initial catalog=Cinemas2001;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+            providerName="System.Data.EntityClient" />/>
+    </connectionStrings>
 </configuration>
