--- a/Cinemas2001/Cinemas2001/Cinemas2001.csproj
+++ b/Cinemas2001/Cinemas2001/Cinemas2001.csproj
@@ -55,6 +55,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Acceso_Datos\AD_Datos.cs" />
+    <Compile Include="Cinemas2001DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Cinemas2001DataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +104,17 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Cinemas2001Model.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="Cinemas2001DataSet.xsc">
+      <DependentUpon>Cinemas2001DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Cinemas2001DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Cinemas2001DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Cinemas2001DataSet.xss">
+      <DependentUpon>Cinemas2001DataSet.xsd</DependentUpon>
+    </None>
     <None Include="Modelo\Cinemas2001Model.edmx.diagram">
       <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
     </None>
