--- a/Cinemas2001/Cinemas2001/Cinemas2001.csproj
+++ b/Cinemas2001/Cinemas2001/Cinemas2001.csproj
@@ -33,10 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -55,11 +55,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Acceso_Datos\AD_Datos.cs" />
-    <Compile Include="Cinemas2001DataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Cinemas2001DataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +62,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Logica_Negocio\LN_Login.cs" />
+    <Compile Include="Modelo\Asiento.cs">
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Modelo\Cinemas2001Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -82,6 +80,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Modelo\Horario.cs">
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Modelo\MO_Asiento.cs" />
     <Compile Include="Modelo\MO_Categoria.cs" />
     <Compile Include="Modelo\MO_Director.cs" />
@@ -92,6 +93,24 @@
     <Compile Include="Modelo\MO_Ticket.cs" />
     <Compile Include="Modelo\MO_Sala.cs" />
     <Compile Include="Modelo\MO_Pelicula.cs" />
+    <Compile Include="Modelo\Pelicula.cs">
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelo\Sala.cs">
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelo\Sede.cs">
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelo\sysdiagram.cs">
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelo\Tarjeta_Credito.cs">
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelo\Ticket.cs">
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Modelo\Usuario.cs">
       <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
@@ -113,17 +132,6 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Cinemas2001Model.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Cinemas2001DataSet.xsc">
-      <DependentUpon>Cinemas2001DataSet.xsd</DependentUpon>
-    </None>
-    <None Include="Cinemas2001DataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>Cinemas2001DataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Cinemas2001DataSet.xss">
-      <DependentUpon>Cinemas2001DataSet.xsd</DependentUpon>
-    </None>
     <None Include="Modelo\Cinemas2001Model.edmx.diagram">
       <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
     </None>
