--- a/Cinemas2001/Cinemas2001/App.config
+++ b/Cinemas2001/Cinemas2001/App.config
@@ -1,14 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="Cinemas2001Entities" connectionString="metadata=res://*/Modelo.Cinemas2001Model.csdl|res://*/Modelo.Cinemas2001Model.ssdl|res://*/Modelo.Cinemas2001Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALEPC;initial catalog=Cine;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Cinemas2001Entities" connectionString="metadata=res://*/Modelo.Cinemas2001Model.csdl|res://*/Modelo.Cinemas2001Model.ssdl|res://*/Modelo.Cinemas2001Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-B4PTCRP;initial catalog=Cine;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="Cinemas2001.Properties.Settings.Cinemas2001ConnectionString"
+      connectionString="Data Source=ALEPC;Initial Catalog=Cinemas2001;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="Cinemas2001.Properties.Settings.CineConnectionString"
+      connectionString="Data Source=DESKTOP-B4PTCRP;Initial Catalog=Cine;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
