--- a/Cinemas2001/Cinemas2001/Cinemas2001.csproj
+++ b/Cinemas2001/Cinemas2001/Cinemas2001.csproj
@@ -61,6 +61,11 @@
     <Compile Include="CambiarContrasenha.Designer.cs">
       <DependentUpon>CambiarContrasenha.cs</DependentUpon>
     </Compile>
+    <Compile Include="CineDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CineDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +113,7 @@
     <Compile Include="Modelo\MO_Ticket.cs" />
     <Compile Include="Modelo\MO_Sala.cs" />
     <Compile Include="Modelo\MO_Pelicula.cs" />
+    <Compile Include="Modelo\ObservableListSource.cs" />
     <Compile Include="Modelo\Pelicula.cs">
       <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
@@ -131,6 +137,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TarjetasForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TarjetasForm.Designer.cs">
+      <DependentUpon>TarjetasForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CambiarContrasenha.resx">
       <DependentUpon>CambiarContrasenha.cs</DependentUpon>
     </EmbeddedResource>
@@ -152,14 +164,29 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TarjetasForm.resx">
+      <DependentUpon>TarjetasForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EntityDeploy Include="Modelo\Cinemas2001Model.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Cinemas2001Model.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="CineDataSet.xsc">
+      <DependentUpon>CineDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="CineDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>CineDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="CineDataSet.xss">
+      <DependentUpon>CineDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Modelo\Cinemas2001Model.edmx.diagram">
       <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\Cinemas2001.Modelo.Usuario.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -171,7 +198,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
