--- a/Cinemas2001/Cinemas2001/Properties/Settings.settings
+++ b/Cinemas2001/Cinemas2001/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=ALEPC;Initial Catalog=Cinemas2001;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="CineConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-B4PTCRP;Initial Catalog=Cine;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=DESKTOP-B4PTCRP;Initial Catalog=Cine;Integrated Security=True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
