--- a/Cinemas2001/Cinemas2001/App.config
+++ b/Cinemas2001/Cinemas2001/App.config
@@ -8,15 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="Cinemas2001Entities" connectionString="metadata=res://*/Modelo.Cinemas2001Model.csdl|res://*/Modelo.Cinemas2001Model.ssdl|res://*/Modelo.Cinemas2001Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-B4PTCRP;initial catalog=Cine;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="Cinemas2001.Properties.Settings.Cinemas2001ConnectionString"
-      connectionString="Data Source=ALEPC;Initial Catalog=Cinemas2001;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="Cinemas2001.Properties.Settings.CineConnectionString"
-      connectionString="Data Source=DESKTOP-B4PTCRP;Initial Catalog=Cine;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    
+  <add name="Cinemas2001Entities" connectionString="metadata=res://*/Modelo.Cinemas2001Model.csdl|res://*/Modelo.Cinemas2001Model.ssdl|res://*/Modelo.Cinemas2001Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALEPC;initial catalog=Cine;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
