--- a/Cinemas2001/Cinemas2001/Cinemas2001.csproj
+++ b/Cinemas2001/Cinemas2001/Cinemas2001.csproj
@@ -72,6 +72,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CineDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="EliminarTarjeta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EliminarTarjeta.Designer.cs">
+      <DependentUpon>EliminarTarjeta.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -154,6 +160,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CambiarContrasenha.resx">
       <DependentUpon>CambiarContrasenha.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EliminarTarjeta.resx">
+      <DependentUpon>EliminarTarjeta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
