--- a/Cinemas2001/Cinemas2001/Cinemas2001.csproj
+++ b/Cinemas2001/Cinemas2001/Cinemas2001.csproj
@@ -72,6 +72,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CineDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="EditarInformacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditarInformacion.Designer.cs">
+      <DependentUpon>EditarInformacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="EliminarTarjeta.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,6 +166,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CambiarContrasenha.resx">
       <DependentUpon>CambiarContrasenha.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditarInformacion.resx">
+      <DependentUpon>EditarInformacion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EliminarTarjeta.resx">
       <DependentUpon>EliminarTarjeta.cs</DependentUpon>
