--- a/Cinemas2001/Cinemas2001/Cinemas2001.csproj
+++ b/Cinemas2001/Cinemas2001/Cinemas2001.csproj
@@ -110,28 +110,31 @@
       <DependentUpon>MenuPrincipal.cs</DependentUpon>
     </Compile>
     <Compile Include="Modelo\Asiento.cs">
-      <DependentUpon>Cinemas2001Entities.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Modelo\Cinemas2001Entities.Context.cs">
+    <Compile Include="Modelo\Asiento_Horario.cs">
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelo\Cinemas2001Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Cinemas2001Entities.Context.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Modelo\Cinemas2001Entities.cs">
+    <Compile Include="Modelo\Cinemas2001Model.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Cinemas2001Entities.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Modelo\Cinemas2001Entities.Designer.cs">
+    <Compile Include="Modelo\Cinemas2001Model.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Cinemas2001Entities.edmx</DependentUpon>
+      <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
     </Compile>
     <Compile Include="Modelo\Fila_Asiento.cs">
-      <DependentUpon>Cinemas2001Entities.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Modelo\Horario.cs">
-      <DependentUpon>Cinemas2001Entities.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Modelo\MO_Asiento.cs" />
     <Compile Include="Modelo\MO_Sede.cs" />
@@ -142,25 +145,25 @@
     <Compile Include="Modelo\MO_Pelicula.cs" />
     <Compile Include="Modelo\ObservableListSource.cs" />
     <Compile Include="Modelo\Pelicula.cs">
-      <DependentUpon>Cinemas2001Entities.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Modelo\Sala.cs">
-      <DependentUpon>Cinemas2001Entities.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Modelo\Sede.cs">
-      <DependentUpon>Cinemas2001Entities.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Modelo\sysdiagram.cs">
-      <DependentUpon>Cinemas2001Entities.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Modelo\Tarjeta_Credito.cs">
-      <DependentUpon>Cinemas2001Entities.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Modelo\Ticket.cs">
-      <DependentUpon>Cinemas2001Entities.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Modelo\Usuario.cs">
-      <DependentUpon>Cinemas2001Entities.tt</DependentUpon>
+      <DependentUpon>Cinemas2001Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -217,12 +220,12 @@
     <None Include="CineDataSet.xss">
       <DependentUpon>CineDataSet.xsd</DependentUpon>
     </None>
-    <EntityDeploy Include="Modelo\Cinemas2001Entities.edmx">
+    <EntityDeploy Include="Modelo\Cinemas2001Model.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Cinemas2001Entities.Designer.cs</LastGenOutput>
+      <LastGenOutput>Cinemas2001Model.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Modelo\Cinemas2001Entities.edmx.diagram">
-      <DependentUpon>Cinemas2001Entities.edmx</DependentUpon>
+    <None Include="Modelo\Cinemas2001Model.edmx.diagram">
+      <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Cinemas2001.Modelo.Usuario.datasource" />
@@ -245,15 +248,15 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Modelo\Cinemas2001Entities.Context.tt">
+    <Content Include="Modelo\Cinemas2001Model.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Cinemas2001Entities.edmx</DependentUpon>
-      <LastGenOutput>Cinemas2001Entities.Context.cs</LastGenOutput>
+      <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
+      <LastGenOutput>Cinemas2001Model.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Modelo\Cinemas2001Entities.tt">
+    <Content Include="Modelo\Cinemas2001Model.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Cinemas2001Entities.edmx</DependentUpon>
-      <LastGenOutput>Cinemas2001Entities.cs</LastGenOutput>
+      <DependentUpon>Cinemas2001Model.edmx</DependentUpon>
+      <LastGenOutput>Cinemas2001Model.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
