--- a/Cinemas2001/Cinemas2001/Cinemas2001.csproj
+++ b/Cinemas2001/Cinemas2001/Cinemas2001.csproj
@@ -167,6 +167,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TablaHistorial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TablaHistorial.Designer.cs">
+      <DependentUpon>TablaHistorial.cs</DependentUpon>
+    </Compile>
     <Compile Include="TarjetasForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -206,6 +212,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TablaHistorial.resx">
+      <DependentUpon>TablaHistorial.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TarjetasForm.resx">
       <DependentUpon>TarjetasForm.cs</DependentUpon>
     </EmbeddedResource>
