--- a/Cinemas2001/Cinemas2001/App.config
+++ b/Cinemas2001/Cinemas2001/App.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="Cinemas2001Entities" connectionString="metadata=res://*/Modelo.Cinemas2001Model.csdl|res://*/Modelo.Cinemas2001Model.ssdl|res://*/Modelo.Cinemas2001Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-B4PTCRP;initial catalog=Cine;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+         
+ <add name="Cinemas2001Entities" connectionString="metadata=res://*/Modelo.Cinemas2001Model.csdl|res://*/Modelo.Cinemas2001Model.ssdl|res://*/Modelo.Cinemas2001Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALEPC;initial catalog=Cine;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
